[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
bcrypt = "0.17.1"
chrono = "0.4.41"
diesel = "2.2.12"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
r2d2 = "0.8.10"
serde = "1.0.219"
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
db = { path = "../db" }
futures-util = "0.3.31"
validator = { version = "0.20.0", features = ["derive"] }
